.metadata/.plugins/org.eclipse.cdt.ui/pruebaTp3.build.log
21:52:01 **** Rebuild of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o LinkedList.o "..\\LinkedList.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Servicios.o "..\\Servicios.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:36:36: warning: passing argument 2 of 'll_map' makes pointer from integer without a cast [-Wint-conversion]
              ll_map(listaServicios,multiplicar((Servicios*)puntero));
                                    ^~~~~~~~~~~
In file included from ..\main.c:4:0:
..\LinkedList.h:38:5: note: expected 'int (*)(void *)' but argument is of type 'int'
 int ll_map(LinkedList* this,int(*pFunc)(void*));
     ^~~~~~
..\main.c:36:36: warning: 'puntero' may be used uninitialized in this function [-Wmaybe-uninitialized]
              ll_map(listaServicios,multiplicar((Servicios*)puntero));
                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Passenger.o "..\\Passenger.c" 
In file included from ..\Passenger.c:5:0:
..\Passenger.h:34:5: error: conflicting types for 'getFlotante'
 int getFlotante(Passenger* this,char* precio);
     ^~~~~~~~~~~
In file included from ..\Controller.h:2:0,
                 from ..\Passenger.c:4:
..\Servicios.h:33:5: note: previous declaration of 'getFlotante' was here
 int getFlotante(Servicios* this,float* flotante);
     ^~~~~~~~~~~

21:52:06 Build Failed. 1 errors, 2 warnings. (took 4s.530ms)

